--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
     <link href="https://fonts.googleapis.com/css?family=Amiri|Sorts+Mill+Goudy|Almendra|Della+Respira&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/cards.css">
     <link rel="manifest" href="/manifest.json">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-<main class="grid-container">
-    <character-component v-for="character in characters" :character="character"/>
-</main>
+    <main id="app">
+    <div v-if="showform">
+          Raw Content:<br>
+           <textarea name="source_textarea" rows="20" cols="120" v-model="source" value="qqqq"></textarea> <br>
+          <button v-on:click="showCards">Render cards</button>
+    </div>
+    <div v-if="showcards">
+        <div class="grid-container">
+            <card v-for="entry in cards" v-bind:entry="entry" />
+        </div>
+        <button v-on:click="showForms">Edit</button></div>
+    </main>
+    <script src="js/cards.js"></script>
 </body>
 </html>
