Allow card import from srd20

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 <body>
     <main id="app">
     <div v-if="showform">
-          Raw Content:<br>
-           <textarea name="source_textarea" rows="20" cols="120" v-model="source" value="qqqq"></textarea> <br>
+          Creature JSON:<br>
+          <textarea name="source_textarea" rows="20" cols="120" v-model="source" value="qqqq"></textarea> <br>
           <button v-on:click="showCards">Render cards</button>
+          <textarea name="source_srd_textarea" rows="3" cols="20" v-model="source_srd" value=""></textarea> <br>
+          <button v-on:click="importSrd">Import</button>
     </div>
     <div v-if="showcards">
         <div class="grid-container">
