--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
           Creature JSON:<br>
           <textarea name="source_textarea" rows="20" cols="120" v-model="source" value="qqqq"></textarea> <br>
           <button v-on:click="showCards">Render cards</button>
+          <br>
+          SRD20 table:<br>
           <textarea name="source_srd_textarea" rows="3" cols="20" v-model="source_srd" value=""></textarea> <br>
           <button v-on:click="importSrd">Import</button>
     </div>
